# tank-game

./: Cargo.toml  README.org  compose.yaml
client/: Cargo.toml
client-lib-rs/: Cargo.toml
client-lib-rs/src/: lib.rs
client-py/src/: lib.py  main.py
client-rs/: Dockerfile
client/src/: lib.rs  main.rs  team_code.rs
messages/: Cargo.toml
messages/src/: client.rs  lib.rs  server.rs
server/: Cargo.toml  Dockerfile
server.bak/: Dockerfile
server.bak/assets/: wall.xcf
server.bak/src/: main.rs  tank.rs
server/assets/: config.jsonc  map.jsonc  tank.xcf
server/assets/map_imgs/: master-doc.kra  master-doc.kra~
server/assets/maps/: layout-00.jsonc  map.jsonc
server/src/: bullet.rs  config.rs  debug.rs  entities.rs  main.rs  map.rs  systems.rs  tank.rs  ui.rs  util.rs
src/: main.rs  map.rs  tank.rs  util.rs
