[package]
name = "tank-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["wayland"] }
iyes_perf_ui = "0.4.0"
json = "0.12.4"
serde = "1.0.219"
thiserror = "2.0.12"
messages = { path = "../messages" }

# Settings from the Bevy docs
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
